fixing covers

--- a/src/css/partials/bestseller.css
+++ b/src/css/partials/bestseller.css
@@ -1,8 +1,8 @@
-img{
+/* img{
     width: 200px;
     padding-top: 25px;
     padding-left: 20px;
-}
+} */
 
 p{
     padding-left: 20px;
